<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:id="@+id/snack_layout"
	android:background="@color/theme_backgrond"
    android:orientation="vertical">

	<include layout="@layout/ui_view_toolbar"/>

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent">
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="@dimen/ten"
			android:orientation="vertical">
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="@dimen/fifty"
				android:background="@android:color/white"
				android:orientation="horizontal">
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="match_parent"
					android:text="@string/reg_phone"
					android:gravity="center"
					android:textSize="@dimen/t_eighteen"
					android:paddingLeft="@dimen/ten"
					android:paddingRight="@dimen/ten"
					android:textColor="@color/theme_black"/>
				<EditText
					android:id="@+id/et_username"
					style="@style/inputTheme"
					android:hint="@string/hint_username"
					android:inputType="numberSigned" />
			</LinearLayout>
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="@dimen/fifty"
				android:layout_marginTop="@dimen/two"
				android:background="@android:color/white"
				android:orientation="horizontal">
				<EditText
					android:id="@+id/et_code"
					style="@style/inputTheme"
					android:layout_weight="3"
					android:hint="@string/hint_code"
					android:inputType="numberSigned" />
				<View
					android:layout_width="@dimen/pfive"
					android:layout_height="match_parent"
					android:layout_marginTop="@dimen/five"
					android:layout_marginBottom="@dimen/five"
					android:background="@color/theme_color"/>
				<TextView
					android:id="@+id/tv_code"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:layout_weight="7"
					android:text="@string/reg_code"
					android:gravity="center"
					android:textSize="@dimen/t_eighteen"
					android:textColor="@color/theme_color"/>
			</LinearLayout>
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="@dimen/fifty"
				android:layout_marginTop="@dimen/two"
				android:background="@android:color/white"
				android:orientation="horizontal">
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="match_parent"
					android:text="@string/reg_pass"
					android:gravity="center"
					android:textSize="@dimen/t_eighteen"
					android:paddingLeft="@dimen/ten"
					android:paddingRight="@dimen/ten"
					android:textColor="@color/theme_black"/>
				<EditText
					android:id="@+id/et_password"
					style="@style/inputTheme"
					android:hint="@string/hint_pass" />
			</LinearLayout>
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="@dimen/fifty"
				android:layout_marginTop="@dimen/two"
				android:background="@android:color/white"
				android:orientation="horizontal">
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="match_parent"
					android:text="@string/reg_repass"
					android:gravity="center"
					android:textSize="@dimen/t_eighteen"
					android:paddingLeft="@dimen/ten"
					android:paddingRight="@dimen/ten"
					android:textColor="@color/theme_black"/>
				<EditText
					android:id="@+id/et_repassword"
					style="@style/inputTheme"
					android:hint="@string/hint_repass" />
			</LinearLayout>
			<TextView
				android:id="@+id/tv_register"
				android:layout_width="fill_parent"
				android:layout_height="@dimen/forty_five"
				android:layout_marginLeft="@dimen/twenty"
				android:layout_marginRight="@dimen/twenty"
				android:layout_marginTop="@dimen/thirty"
				android:text="@string/app_register"
				android:textColor="@android:color/white"
				android:textSize="@dimen/t_sixteen"
				android:background="@drawable/radius_solid_theme"
				android:gravity="center"/>
		</LinearLayout>
	</ScrollView>
</LinearLayout>