<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/snack_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/theme_backgrond">

    <include layout="@layout/ui_view_toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@android:color/white"
                android:padding="@dimen/ten">
                <TextView
                    android:id="@+id/tv_point"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="账户余额：0.00"
                    android:textSize="@dimen/t_twenty"
                    android:textColor="@color/theme_color"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/five"
                    android:text="最多可提现的金额：800.00"
                    android:textSize="@dimen/t_sixteen"
                    android:textColor="@color/theme_font"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/fifty"
                android:layout_marginTop="@dimen/ten"
                android:background="@android:color/white"
                android:paddingLeft="@dimen/fifteen"
                android:paddingRight="@dimen/fifteen"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/funds_money"
                    android:textSize="@dimen/t_sixteen"
                    android:textColor="@color/theme_black"/>
                <EditText
                    android:id="@+id/et_txt1"
                    style="@style/inputTheme"
                    android:hint="@string/funds_hint1"
                    android:inputType="number" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/fifty"
                android:layout_marginTop="@dimen/one"
                android:background="@android:color/white"
                android:paddingLeft="@dimen/fifteen"
                android:paddingRight="@dimen/fifteen"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/funds_bank"
                    android:textSize="@dimen/t_sixteen"
                    android:textColor="@color/theme_black"/>
                <EditText
                    android:id="@+id/et_txt2"
                    style="@style/inputTheme"
                    android:layout_weight="1"
                    android:hint="@string/funds_hint2" />
                <ImageView
                    android:layout_width="@dimen/thirty_five"
                    android:layout_height="match_parent"
                    android:src="@mipmap/tixian"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/fifty"
                android:layout_marginTop="@dimen/one"
                android:background="@android:color/white"
                android:paddingLeft="@dimen/fifteen"
                android:paddingRight="@dimen/fifteen"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/funds_admin"
                    android:textSize="@dimen/t_sixteen"
                    android:textColor="@color/theme_black"/>
                <EditText
                    android:id="@+id/et_txt3"
                    style="@style/inputTheme"
                    android:hint="@string/funds_hint3"
                    android:inputType="numberSigned" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/fifty"
                android:layout_marginTop="@dimen/one"
                android:background="@android:color/white"
                android:paddingLeft="@dimen/fifteen"
                android:paddingRight="@dimen/fifteen"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/funds_name"
                    android:textSize="@dimen/t_sixteen"
                    android:textColor="@color/theme_black"/>
                <EditText
                    android:id="@+id/et_txt4"
                    style="@style/inputTheme"
                    android:hint="@string/funds_hint4" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/fifty"
                android:layout_marginTop="@dimen/one"
                android:background="@android:color/white"
                android:paddingLeft="@dimen/fifteen"
                android:paddingRight="@dimen/fifteen"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/funds_password"
                    android:textSize="@dimen/t_sixteen"
                    android:textColor="@color/theme_black"/>
                <EditText
                    android:id="@+id/et_txt5"
                    style="@style/inputTheme"
                    android:hint="@string/funds_hint5"
                    android:inputType="textPassword" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_btn"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/forty_five"
                android:layout_margin="@dimen/twenty"
                android:text="@string/app_sure"
                android:textColor="@android:color/white"
                android:textSize="@dimen/t_sixteen"
                android:background="@drawable/radius_solid_theme"
                android:gravity="center"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>