<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/theme_backgrond">

    <include layout="@layout/ui_view_toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/fifty"
                    android:gravity="center"
                    android:text="@string/cash_score"
                    android:textSize="@dimen/t_eighteen"
                    android:textColor="@color/theme_color"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="0.00"
                    android:textSize="@dimen/t_twenty_two"
                    android:textColor="@color/theme_color"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/fifty"
                    android:gravity="center"
                    android:text="可收入的金额：50.00元"
                    android:textSize="@dimen/t_eighteen"
                    android:textColor="@color/theme_font"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/fifty"
                android:layout_marginTop="@dimen/ten"
                android:background="@android:color/white"
                android:paddingLeft="@dimen/fifteen"
                android:paddingRight="@dimen/fifteen"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cash_merchant"
                    android:textSize="@dimen/t_sixteen"
                    android:textColor="@color/theme_black"/>
                <EditText
                    style="@style/inputTheme"
                    android:hint="@string/hint_merchant"
                    android:inputType="numberSigned" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/fifty"
                android:layout_marginTop="@dimen/one"
                android:background="@android:color/white"
                android:paddingLeft="@dimen/fifteen"
                android:paddingRight="@dimen/fifteen"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cash_password"
                    android:textSize="@dimen/t_sixteen"
                    android:textColor="@color/theme_black"/>
                <EditText
                    style="@style/inputTheme"
                    android:hint="@string/hint_password"
                    android:inputType="numberSigned" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/fifty"
                android:layout_marginTop="@dimen/one"
                android:background="@android:color/white"
                android:paddingLeft="@dimen/fifteen"
                android:paddingRight="@dimen/fifteen"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cash_admin"
                    android:textSize="@dimen/t_sixteen"
                    android:textColor="@color/theme_black"/>
                <EditText
                    style="@style/inputTheme"
                    android:hint="@string/hint_admin"
                    android:inputType="numberSigned" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/fifty"
                android:layout_marginTop="@dimen/ten"
                android:background="@android:color/white"
                android:paddingLeft="@dimen/fifteen"
                android:paddingRight="@dimen/fifteen"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cash_money"
                    android:textSize="@dimen/t_sixteen"
                    android:textColor="@color/theme_black"/>
                <EditText
                    style="@style/inputTheme"
                    android:hint="@string/hint_money"
                    android:inputType="numberSigned" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ten"
                android:background="@android:color/white"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/fifteen"
                    android:text="@string/cash_intro"
                    android:textSize="@dimen/t_sixteen"
                    android:textColor="@color/theme_black"/>
                <EditText
                    android:id="@+id/et_suggest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="5"
                    android:gravity="top"
                    android:background="@null"
                    android:hint="@string/cash_intro"
                    android:textSize="@dimen/t_sixteen"
                    android:textColor="@color/theme_black"
                    android:textColorHint="@color/theme_font"/>
            </LinearLayout>

            <TextView
                android:id="@+id/tv_btn"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/forty_five"
                android:layout_margin="@dimen/twenty"
                android:text="@string/app_sure"
                android:textColor="@android:color/white"
                android:textSize="@dimen/t_sixteen"
                android:background="@drawable/radius_solid_theme"
                android:gravity="center"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
