<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:id="@+id/snack_layout"
    android:background="@color/theme_backgrond"
    android:orientation="vertical">
	<ImageView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:layout_marginTop="@dimen/eighty"
		android:contentDescription="@string/app_name"
		android:src="@mipmap/puhui_login"/>
	<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/fifty"
        android:layout_marginLeft="@dimen/twenty"
        android:layout_marginRight="@dimen/twenty"
        android:layout_marginTop="@dimen/twenty"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal" >
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:text="@string/app_login"
			android:gravity="center"
			android:textSize="@dimen/t_eighteen"
			android:paddingLeft="@dimen/ten"
			android:paddingRight="@dimen/ten"
			android:textColor="@color/theme_black"/>
		<View
			android:layout_width="@dimen/pfive"
			android:layout_height="match_parent"
			android:layout_marginTop="@dimen/five"
			android:layout_marginBottom="@dimen/five"
			android:background="@android:color/black"/>
		<EditText
			android:id="@+id/et_username"
			style="@style/inputTheme"
			android:hint="@string/hint_username"
			android:inputType="numberSigned" />
    </LinearLayout>
	<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/fifty"
        android:layout_marginLeft="@dimen/twenty"
        android:layout_marginRight="@dimen/twenty"
        android:layout_marginTop="@dimen/ten"
		android:background="@android:color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal" >
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:text="@string/app_password"
			android:gravity="center"
			android:textSize="@dimen/t_eighteen"
			android:paddingLeft="@dimen/ten"
			android:paddingRight="@dimen/ten"
			android:textColor="@color/theme_black"/>
		<View
			android:layout_width="@dimen/pfive"
			android:layout_height="match_parent"
			android:layout_marginTop="@dimen/five"
			android:layout_marginBottom="@dimen/five"
			android:background="@android:color/black"/>
        <EditText
            android:id="@+id/et_password"
			style="@style/inputTheme"
            android:hint="@string/hint_password"
            android:inputType="textPassword" />
    </LinearLayout>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="@dimen/twenty"
		android:layout_marginRight="@dimen/twenty"
		android:layout_marginTop="@dimen/twenty"
		android:orientation="horizontal">
		<ImageView
			android:id="@+id/iv_col"
			android:layout_width="@dimen/eighteen"
			android:layout_height="@dimen/eighteen"
			android:layout_marginTop="@dimen/two"
			android:src="@drawable/check_selected_mind"/>
		<TextView
			android:id="@+id/tv_auto"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:textSize="@dimen/t_sixteen"
			android:textColor="@color/theme_color"
			android:text="@string/txt_remember"/>
		<TextView
			android:id="@+id/tv_forget"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="@dimen/t_sixteen"
			android:textColor="@color/theme_font"
			android:text="@string/txt_forget"/>
	</LinearLayout>
    <TextView 
      	android:id="@+id/tv_login"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/forty_five"
        android:layout_marginLeft="@dimen/twenty"
        android:layout_marginRight="@dimen/twenty"
        android:layout_marginTop="@dimen/twenty"
        android:text="@string/app_login"
        android:textColor="@android:color/white"
        android:textSize="@dimen/t_sixteen"
		android:background="@drawable/radius_solid_theme"
        android:gravity="center"/>
	<RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
		android:layout_marginLeft="@dimen/twenty"
		android:layout_marginRight="@dimen/twenty"
		android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/thirty" >
        <View
			android:layout_width="match_parent"
			android:layout_height="@dimen/one"
			android:layout_centerInParent="true"
			android:background="@color/theme_font"/>
        <TextView 
            android:id="@+id/tv_register"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerInParent="true"
			android:background="@color/theme_backgrond"
			android:textColor="@color/theme_font"
	        android:text="@string/txt_register"/>
    </RelativeLayout>
</LinearLayout>