<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/theme_backgrond">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@android:color/white"
        android:padding="@dimen/ten">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/account_balance"
            android:textSize="@dimen/t_eighteen"
            android:textColor="@color/theme_black"/>
        <TextView
            android:id="@+id/tv_point"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/five"
            android:text="￥0.00"
            android:textSize="@dimen/t_twenty"
            android:textColor="@color/theme_color"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/five"
        android:background="@color/theme_backgrond"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_left"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/fifteen"
            android:text="@string/account_tab1"
            android:background="@drawable/check_selected_dep"
            android:textColor="@color/check_text_dep"
            android:textSize="@dimen/t_eighteen"/>
        <TextView
            android:id="@+id/tv_middle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/fifteen"
            android:text="@string/account_tab2"
            android:background="@drawable/check_selected_dep"
            android:textColor="@color/check_text_dep"
            android:textSize="@dimen/t_eighteen"/>
        <TextView
            android:id="@+id/tv_right"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/fifteen"
            android:text="@string/account_tab3"
            android:background="@drawable/check_selected_dep"
            android:textColor="@color/check_text_dep"
            android:textSize="@dimen/t_eighteen"/>
    </LinearLayout>
</LinearLayout>
